# omni-bridge-translator

./: .env.example  .gitignore  LICENSE  README.md  analysis.txt  analysis_final.txt  analysis_final_clean.txt  analysis_final_clean_utf8.txt  analysis_final_utf8.txt  analysis_options.yaml  analysis_utf8.txt  analyze.txt  database.rules.json  diff.txt  diff_files.txt  installer_setup.iss  pubspec.yaml  pyrightconfig.json  start_server.bat  test_output.txt  test_results.txt
server/: audio_capture.py  audio_meter.py  flutter_server.py  nim_api.py  omni_bridge_server.spec  pyproject.toml  requirements.txt  shared_pyaudio.py  tmp_test_latency.py
server/.pyarmor/: config
server/dist_obfuscated/: audio_capture.py  audio_meter.py  flutter_server.py  nim_api.py  shared_pyaudio.py
server/dist_obfuscated/models/: __init__.py  google_model.py  llama_model.py  mymemory_model.py  riva_model.py  speech_recognition_model.py  whisper_model.py
server/dist_obfuscated/pyarmor_runtime_000000/: __init__.py
server/models/: google_cloud_model.py  google_model.py  llama_model.py  mymemory_model.py  riva_model.py  speech_recognition_model.py  whisper_model.py
server/src/asr/: __init__.py  asr_dispatcher.py
server/src/audio/: __init__.py  capture.py  handler.py  meter.py
server/src/models/: google_cloud_model.py  google_model.py  llama_model.py  riva_model.py  (+2 more)
server/tests/: conftest.py  extract_error.py  list_nvcf.py  parakeet_output.txt  parakeet_results.txt  pure_test_parakeet.py  riva_functions.txt  test_asr_dispatcher.py  test_auto_lang.py  test_orchestrator.py  test_parakeet_codes.py  test_riva_canary.py  test_riva_canary_multi.py  test_riva_langs.py  test_translation_dispatcher.py
(+546 files in other folders)
