[project]
name = "omni-bridge-server"
version = "1.0.0"
description = "High-performance AI orchestration server for Omni Bridge"
authors = [
    {name = "Omni Bridge Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyaudiowpatch>=0.2.12.1",
    "websockets>=11.0.0",
    "structlog>=23.1.0",
    "pysbd>=0.3.4",
    "openai>=1.0.0",
    "deep-translator>=1.11.0",
    "speechrecognition>=3.10.0",
    "psutil>=5.9.0",
    "sounddevice",
    "numpy",
    "requests",
    "httpx",
    "python-multipart",
    "PyAudio",
    "nvidia-riva-client",
    "openai-whisper",
    "resampy",
    "pyarmor",
    "google-cloud-translate",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
